Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123597

QAudioDecoder crashes on files without audio track

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.5.6, 6.7.0, 6.7.1, 6.8.0 FF
    • 6.6.2
    • Multimedia
    • Gentoo Linux + KDE. pipewire-1.0.3. gstreamer-1.22.3. ffmpeg-6.1.1
    • Linux/X11, Windows
    • 5d2bdf009 (6.7.0), fb48aeb49 (dev), fbcbdf3e3 (6.7), 4c79ae481 (6.6), 810eb7390 (tqtc/lts-6.5), cd8330b98 (dev), 301900232 (6.7), 10d5015f1 (6.6), a04d2a930 (tqtc/lts-6.5)
    • Multimedia Wk 13-14

      I tried a super short recording with QMediaRecorder and fed the result to QAudioDecoder.
      It crashed (segmentation fault) immediately somewhere inside of QtMultimedia.

      Then I tried ffprobe on the recorded audio and noticed there is just metadata for the container itself but nothing about audio tracks, which is probably Ok for my super short test.

      But QAudioRecorder should not crash my application anyway no matter how broken the media file is.

       

      See the attached file for a minimal example.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            artemiy Artem Dyomin
            rion Rion
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: