Check audio streams in QAudioDecoder upon start

Fixes: QTBUG-123597
Pick-to: 6.5
Change-Id: Ic4dbed477beaa46b280a5d7ff1dc8f9ecd39b576
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
(cherry picked from commit 5d2bdf00927771b74c407f7ffa958eb37b1f5e89)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fbcbdf3e3b78ec98ca933549596fdef636be3da4)